Fixed a grammatical issue with the description.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,4 +2,4 @@ name: WebSocketServices
 main: com.caffeinatedrat.WebSocketServices.WebSocketServices
 authors: ['CaffeinatedRat']
 version: 1.0.0.0
-description: Provides simple websocket services for a Minecraft server.
+description: Provides a simple websocket services for a Minecraft server.
