--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,9 +6,9 @@ websocket:
   #Sets the maximum number of connections the server can handle concurrently.
   maximumConnections: 32
   #Sets the number of milliseconds that the server will wait for a handshake to complete.
-  handshakeTimeOutInMilliseconds: 1000
+  handshakeTimeOutTolerance: 1000
   #Sets the number of milliseconds that the server will wait for a the next frame before terminating the connection.
-  frameWaitTimeOutInMilliseconds: 15000
+  frameTimeOutTolerance: 15000
   #Determines if the origin is valid during the handshake.  If the origin is null it is invalid and the connection is rejected.
   checkOrigin: true
   #Determines if the websocket services are only available to certain ips.  Note that this checks the origin header field during the handshake and can be spoofed by non-browser clients.
@@ -16,6 +16,8 @@ websocket:
   #Determines if the server is pingable via websockets.
   pingable: true
 #Configuration for the commands (services) that are supported.
-command:
-  who: Enabled
-  version: Enabled
+services:
+  who: true
+  plugins: true
+  info: true
+  whitelist: true
