--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /.project
 /.settings
 /WebSocketServices.jardesc
-/WebSocketServices.Remote.launch
+/WebSocketServices Remote.launch
 
 # netbeans
 /nbproject
