--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.caffeinatedrat</groupId>
   <artifactId>WebSocketServices</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <description>Provides simple websocket services for a Minecraft server.</description>
   
   <scm>
@@ -11,12 +11,31 @@
     <url>https://github.com/CaffeinatedRat/WebSocketServices</url>
   </scm>
 
+  <distributionManagement>
+    <repository>
+      <id>ftp-repo</id>
+      <name>WebSocketServices Releases</name>
+      <url>ftp://www.caffeinatedrat.com/</url>
+    </repository>
+  </distributionManagement>
+
   <repositories>
     <repository>
       <id>repobo-snap</id>
       <url>http://repo.bukkit.org/content/groups/public</url>
     </repository>
-  </repositories>  
+  </repositories>
+  
+  <build>
+    <extensions>
+      <!-- Enabling the use of FTP -->
+      <extension>
+        <groupId>org.apache.maven.wagon</groupId>
+         <artifactId>wagon-ftp</artifactId>
+         <version>1.0-beta-6</version>
+      </extension>
+    </extensions>
+  </build>
   
   <dependencies>
   	<dependency>
@@ -30,4 +49,5 @@
   		<version>2.3.8</version>
   	</dependency>
   </dependencies>
+  <name>WebSocketServices</name>
 </project>
