--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,24 @@
          <version>1.0-beta-6</version>
       </extension>
     </extensions>
+	<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-shade-plugin</artifactId>
+			<version>2.0</version>
+			<executions>
+				<execution>
+					<phase>package</phase>
+					<goals>
+						<goal>shade</goal>
+					</goals>
+				</execution>
+			</executions>
+			<configuration>
+				<finalName>${project.artifactId}-${project.version}</finalName>
+			</configuration>
+		</plugin>
+	</plugins>
   </build>
   
   <dependencies>
@@ -42,6 +60,7 @@
   		<groupId>org.bukkit</groupId>
   		<artifactId>bukkit</artifactId>
   		<version>1.3.2-R1.1-SNAPSHOT</version>
+  		<scope>provided</scope>
   	</dependency>
   	<dependency>
   		<groupId>net.iharder</groupId>
