Added the ping service.  Added an attribute that states if a player is an operator to the WHO service.  Added world time to the information service.  Added a dynamic service manager to the executeText method.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -21,5 +21,6 @@ services:
   plugins: true
   info: true
   whitelist: true
+  ping: true
   fragmentationtest: true
   binaryfragmentationtest: true
