--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
   	<dependency>
   		<groupId>org.bukkit</groupId>
   		<artifactId>bukkit</artifactId>
-  		<version>1.3.2-R1.1-SNAPSHOT</version>
+  		<version>1.3.2-R2.0</version>
   		<scope>provided</scope>
   	</dependency>
   	<dependency>
