Added new features for the Offline service for version 1.1.0.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -21,6 +21,7 @@ services:
   plugins: true
   info: true
   whitelist: true
+  offlinePlayers: true
   ping: true
   fragmentationtest: false
   binaryfragmentationtest: false
