Began adding the framework and additional overhead for an intrinsic JSON serializer, so as to eliminate the need for the applicationLayer & serviceLayer to manage it.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -18,6 +18,7 @@ websocket:
 #Configuration for the commands (services) that are supported.
 services:
   who: true
+  	position: true
   plugins: true
   info: true
   whitelist: true
