--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -23,5 +23,6 @@ services:
   whitelist: true
   offlineplayers: true
   ping: true
+  player: true
   fragmentationtest: false
   binaryfragmentationtest: false
