--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,8 +7,10 @@ websocket:
   maximumConnections: 32
   #Sets the number of milliseconds that the server will wait for a handshake to complete.
   handshakeTimeOutTolerance: 1000
-  #Sets the number of milliseconds that the server will wait for a the next frame before terminating the connection.
+  #Sets the number of milliseconds that the server will wait for a frame to complete before terminating the connection.
   frameTimeOutTolerance: 3000
+  #Sets the number of milliseconds that the server will wait before terminating an idle connection.  If this is zero the connection will wait indefinitely.
+  idleConnectionTimeOut: 30000
   #Determines if the origin is valid during the handshake.  If the origin is null, it is invalid and the connection is rejected.
   checkOrigin: true
   #Determines if the websocket services are only available to certain ips.  Note that this checks the origin header field during the handshake and can be spoofed by non-browser clients.
@@ -33,4 +35,4 @@ services:
 #If an extension is not listed here it will not be enabled.
 #WARNING: Plugin names are case sensitive.
 extensions:
-  #ExtensionsName: pluginName
+  #ExtensionsName: pluginname
