--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,5 @@
 #Configuration for the websocket server.
+#In depth configuration information can be found here: http://dev.bukkit.org/bukkit-plugins/websocketservices/pages/configuration/
 websocket:
   portNumber: 25564
   #Logs to the console (0 = off, 1 = simple, 2 = verbose).
