--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.caffeinatedrat</groupId>
   <artifactId>WebSocketServices</artifactId>
-  <version>1.3.1</version>
+  <version>2.0.0</version>
   <description>Provides simple websocket services for a Minecraft server.</description>
   
   <scm>
@@ -24,6 +24,10 @@
       <id>repobo-snap</id>
       <url>http://repo.bukkit.org/content/groups/public</url>
     </repository>
+    <repository>
+      <id>spigot-repo</id>
+      <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
+    </repository>
   </repositories>
   
   <build>
@@ -35,38 +39,38 @@
          <version>1.0-beta-6</version>
       </extension>
     </extensions>
-	<plugins>
-		<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-shade-plugin</artifactId>
-			<version>2.0</version>
-			<executions>
-				<execution>
-					<phase>package</phase>
-					<goals>
-						<goal>shade</goal>
-					</goals>
-				</execution>
-			</executions>
-			<configuration>
-				<finalName>${project.artifactId}-${project.version}</finalName>
-			</configuration>
-		</plugin>
-	</plugins>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>2.0</version>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>shade</goal>
+                    </goals>
+                </execution>
+            </executions>
+            <configuration>
+                <finalName>${project.artifactId}-${project.version}</finalName>
+            </configuration>
+        </plugin>
+    </plugins>
   </build>
   
   <dependencies>
-  	<dependency>
-  		<groupId>org.bukkit</groupId>
-  		<artifactId>bukkit</artifactId>
-  		<version>1.7.2-R0.2</version>
-  		<scope>provided</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>net.iharder</groupId>
-  		<artifactId>base64</artifactId>
-  		<version>2.3.8</version>
-  	</dependency>
+    <!--Spigot-API-->
+    <dependency>
+        <groupId>org.spigotmc</groupId>
+        <artifactId>spigot-api</artifactId>
+        <version>1.8-R0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+        <groupId>net.iharder</groupId>
+        <artifactId>base64</artifactId>
+        <version>2.3.8</version>
+    </dependency>
   </dependencies>
   <name>WebSocketServices</name>
 </project>
