--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
         <artifactId>base64</artifactId>
         <version>2.3.8</version>
     </dependency>
+    <dependency>
+    	<groupId>com.googlecode.json-simple</groupId>
+    	<artifactId>json-simple</artifactId>
+    	<version>1.1.1</version>
+    </dependency>
   </dependencies>
   <name>WebSocketServices</name>
 </project>
